--- a/macOS/Info.plist
+++ b/macOS/Info.plist
@@ -22,5 +22,11 @@
 	<string>1</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Metropolis-Bold.otf</string>
+		<string>Skriik! Electro-mechanical machine.ttf</string>
+		<string>Metropolis-Medium.otf</string>
+	</array>
 </dict>
 </plist>
